Bug 1579030 - Change how horizontal scrolling works in attendees dialog. r=pmorris DONTBUILD

--- a/calendar/base/themes/common/dialogs/calendar-event-dialog.css
+++ b/calendar/base/themes/common/dialogs/calendar-event-dialog.css
@@ -527,7 +527,6 @@ calendar-event-freebusy-day > box {
      the attendee-list always have the same height,
      regardless of the font size. */
     height: 17px;
-    overflow: hidden;
 }
 
 .addressingWidgetCell {
